# freebsd-ports

./: git.sh
N_m3u8DL-RE_ports/: Makefile  distinfo  pkg-descr  pkg-plist
WinXP-Icons-theme/: distinfo
arcticfox_ports/: Makefile  arcticfox.desktop  distinfo  pkg-plist
bdd-nes/: Makefile  pkg-descr  pkg-plist
bhyve-gpu/: Makefile  distinfo  pkg-descr  pkg-plist
buuf-nestort-icons/: Makefile  distinfo  pkg-descr
cachy-browser/: Makefile
clamav-gui/: Makefile  pkg-descr  pkg-plist
clamav-gui-fix/: Makefile  distinfo  pkg-plist
dot-browser/: Makefile  distinfo  pkg-plist
dsd-fme/: Makefile  distinfo  pkg-descr  pkg-plist
dsd-fme/work/dsd-fme-2024-gbc140ec/: CMakeLists.txt  COPYRIGHT  README.md  dsd-fme-qgis-map.qgz  flake.nix  package.nix
dsd-fme/work/dsd-fme-2024-gbc140ec/cmake/: FindCODEC2.cmake
dsd-fme/work/dsd-fme-2024-gbc140ec/include/: descramble.h  dpmr_const.h  dsd.h  dstar_header.h  fcs.h  nxdn_const.h
dsd-fme/work/dsd-fme-2024-gbc140ec/src/: 1.c  2.c  3.c  4.c  5.c  bptc.c  dmr_34.c  dmr_block.c  dmr_bs.c  dmr_csbk.c  dmr_data.c  dmr_dburst.c  dmr_flco.c  dmr_le.c  dmr_ms.c  dmr_pdu.c  dmr_pi.c  dmr_utils.c  dpmr_voice.c  dsd_audio.c  dsd_audio2.c  dsd_dibit.c  dsd_file.c  dsd_filters.c  dsd_frame.c  dsd_frame_sync.c  dsd_gps.c  dsd_import.c  dsd_ks.c  dsd_main.c  dsd_mbe.c  dsd_mbe2.c  dsd_ncurses.c  dsd_reset.c  dsd_rigctl.c  dsd_serial.c  dsd_symbol.c  dsd_time.c  dsd_upsample.c  dstar.c  (+38 more)
firedragon/: Makefile  pkg-plist
firefox-dev/: Makefile  distinfo  pkg-plist
firefox-nightly_ports/: Makefile  distinfo  pkg-descr  pkg-plist
ghostery-browser/: Makefile  distinfo  pkg-descr
hola-proxy/: Makefile  pkg-descr  pkg-plist
idesk-0.7.8/: Makefile  pkg-plist
idesk2/: Makefile  distinfo  pkg-descr
implay/: Makefile  distinfo  pkg-descr
itpp/: Makefile  distinfo  pkg-plist
js-nes/: Makefile  distinfo  pkg-plist
kylin-video/: Makefile  pkg-plist
linux-binance/: Makefile  distinfo  pkg-plist
linux-cromite/: distinfo  pkg-plist
linux-cursor/: Makefile  distinfo  pkg-descr  pkg-plist
linux-edge/: distinfo
linux-floorp/: distinfo  pkg-plist
linux-github-desktop/: Makefile  distinfo  pkg-descr  pkg-plist
linux-gitkraken/: Makefile  distinfo  pkg-descr  pkg-plist
linux-gof/: Makefile  distinfo  pkg-descr  pkg-plist
linux-min-browser/: distinfo  pkg-plist
linux-mullvad/: Makefile
linux-naverwhale/: Makefile  pkg-plist
linux-opera/: Makefile  distinfo  pkg-plist
linux-pulse/: Makefile
linux-slimjet/: Makefile  pkg-plist
linux-thorium/: Makefile  distinfo
linux-vivaldi/: pkg-plist
linux-webcatalog/: distinfo  pkg-descr  pkg-plist
linux-yandex/: Makefile  distinfo  pkg-plist
linux-zen/: Makefile
mercury-browser/: Makefile  pkg-plist
mmp-nes/: Makefile  distinfo  pkg-descr  pkg-plist
moonplayer/: Makefile  pkg-descr
nvtop/: Makefile  distinfo  pkg-descr
obs-composite-blur/: Makefile  distinfo  pkg-descr  pkg-plist
ofp-cwc/: Makefile  pkg-plist
openmohaa/: Makefile  distinfo  pkg-descr
opera-proxy/: Makefile  pkg-plist
proton-experimental/: Makefile  pkg-descr  pkg-plist_amd64  pkg-plist_i386
qmplay2/: Makefile  distinfo
steam-bottler/: Makefile
streamlink2/: Makefile  distinfo  pkg-plist
virtfs-9p-kmod/: Makefile  distinfo  pkg-plist
wasi-libc/: Makefile
windscribe-proxy/: Makefile  distinfo  pkg-descr  pkg-plist  wndstate.json
wine-5kplayer/: distinfo  pkg-plist
wine-HollowKnight/: distinfo  pkg-descr
wine-aimp/: Makefile  distinfo  pkg-plist
wine-avz/: Makefile  distinfo  pkg-descr  pkg-plist
wine-devel/: Makefile  pkg-plist
wine-explorer++/: Makefile  pkg-plist
wine-hxd/: Makefile  distinfo  pkg-descr  pkg-plist
wine-ironmeat/: distinfo  pkg-descr  pkg-plist
wine-lightalloy/: distinfo  pkg-descr  pkg-plist
wine-multicommander/: Makefile  pkg-plist
wine-notepad++/: Makefile  distinfo  pkg-descr  pkg-plist
wine-orbitron/: Makefile  distinfo  pkg-descr  pkg-plist
(+906 files in other folders)
